cs/overlays/staging/ingress.yaml
#The configuration in this file would be common as the request are routed through nginx
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: # These properties would remain same as they are served through nginx
  annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
      kubernetes.io/ingress.class: nginx
      # nginx.ingress.kubernetes.io/backend-protocol: HTTPS
      # nginx.ingress.kubernetes.io/ssl-passthrough: “true”
  name: cs-ingress
spec:
  rules:
    - host: cs-stage.indopus.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
               service:
                name: cs-service
                port: 
                 number: 8080
